apps/user/node-app/overlays/prod/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: node-app
  name: node-app
  namespace: prod
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: node-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-app
    spec:
      containers:
      - name: node-app
        image: ghcr.io/jacekzubielik/node-app:2.2.1
        imagePullPolicy: IfNotPresent
        # env:
        # - name: TZ
        #   valueFrom:
        #     configMapKeyRef:
        #       name: node-app-tz
        #       key: TZ
        ports:
        - containerPort: 3000
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
        resources:
          requests:
            memory: 256Mi
            cpu: 250m   # 500milliCPUs (1/2 CPU)
          limits:
            memory: 512Mi
            cpu: 500m
