apps/user/node-app/overlays/prod/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: node-app-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:DAMRmmKOEvfNjWDUxkwkPrxEeo7WUulrGyDwZt0Xuc4=,iv:rMEWCZy/tKLuo/oOBFE8nfYwnYNYmXyjnJTAzw/SxgQ=,tag:teJc2AQ9Pc/kLO5+AUkL2A==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:eBlmTJ6oIEDJB0nPxeIfr03BBc0L7C1OeEIxKNNVPxM=,iv:enUlNyqXIYC7a4ILxJsjr9UQhhFL23MpPDHAC7v1wLg=,tag:Tbp8H4dWd0oKosP9/FJ3Eg==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEUnkzTk1SZllhRGdyODBT
[...]
            hRlPI6SBV1Rryn5H7bW6mJpHLPFo3vWGm27t8v7ydOCwjETR0n/law==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-24T09:35:04Z"
    mac: ENC[AES256_GCM,data:xGU0wuA0zHYnwwBn3z+/N9QS+NRJ4ZuGcZnT7RoVPVFYRo0Q7L+vDIFdfeRt0IUYTScDQ+RixNkGkNGlI6f/utJc7GY33VsEj5Y48zbqnhQCcgHZ4YMVvfXBdctw0NADRYCQ0lXb2Z/9z0JruyTVESZxqlOo5/q/mztI4ZM3H+M=,iv:Or2cvGClPx8XKsFR03jiYAmbWD5MvDugWbEetFw5Cng=,tag:mB2QifBCOZzSIcWLImYsNQ==,type:str]
    pgp:
        - created_at: "2024-06-22T20:30:12Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/9HbhcZ8nMfB0nhV4WzhL59GMaAcE8TxXibTRpU0Ubcxsf
[...]
            =gjE0
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
