apps/user/node-app/overlays/prod/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "10"
  labels:
    app.kubernetes.io/name: node-app
  name: node-app

spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    name: http
    targetPort: 3000
  selector:
    app.kubernetes.io/name: node-app
    task: node-app
