apps/user/node-app/overlays/prod/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:3ZphM5X55OukmD9fWttkpNvwRQ==,iv:bPjYjqsLAa8ASI79rcdp+VTow5dGpjr4O5vGThUWF+8=,tag:vw15n4nGqQeRFc1rOWODgA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app: node-app
    name: node-app
    namespace: prod
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:Chvs/JggcwVm124m7ch8NElEf7qWhHxthPD8O8JDaPU/4O2IKKqneA==,iv:I71/S/Czr0QfA7U2HT6+PB3yC4C/VLS6OXygIV7+EJ8=,tag:cTSyOON+UJ9ix0E9/xK35A==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: node-app
              port: 3000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:8OmhHmz10yjlrQP5mU7b7u9sGw==,iv:msytfqdQ3AzijeqDL+esO152r/PjuIbAED1BnSoR6QY=,tag:vEHIIFTbsb4P6cTxxyzZQg==,type:str]
              sans:
                - ENC[AES256_GCM,data:4GB7aZav4A+bS8S2Y02TOsyWfno=,iv:2mruj3PtnawVLZ+LSWdeCml0DN0C6z1AjykFiVxRXQM=,tag:q5Jujrs5A2alsizTqtJp+A==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: node-app-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3VmdPNHNiUnRPVkNGczBr
[...]
            T+SPjWaa9y/oIzNQIL/GI6BswjUHYgrxToj4l5kTgqp3SVnL7wZaUg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-25T21:05:01Z"
    mac: ENC[AES256_GCM,data:YPQ4yv4VaXTrzTamlBABmhww3RY93e+/Xe+7f5TWJOkFEvlRl2MogyW8e3kAAvSjzCtu4Ek1cTXxwOI/TlcFcfqDpl4NUjwPPFayfl2N8csP8jBiMkUxMXLWtRXI3VaMziUB6qGvDqkhXFXKkXw5LYQsfzJKTh53WY7/OsXkyuI=,iv:Y/gh5DZu21b5l0PahL1vABb6RocJH0lG+bIEKu3gaLg=,tag:IJt1MUQ6M51nRLfzazi70A==,type:str]
    pgp:
        - created_at: "2024-06-22T20:29:55Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//QnK78RvXmbtGFug7PN3820+5fiqjSaQj0xviHaAQPR2t
[...]
            =E41s
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
