apps/user/node-app/overlays/prod/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:jK+h/LaYzu96xYDlz4MVAUSaGQ==,iv:PE7/zNJaEN0HYkVTiNV5YQFsS5TN7zsTK5FaQPvx0LQ=,tag:KK9AQ88S/7bOpA5eV6L5fA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: node-app
    name: node-app
    namespace: prod
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:MtoJE+15yju7tr1AyMDwHd+Z9Z6kX/Rw3NfbxxskJ2zeO5dONiFNow==,iv:FIKJFuq5qD5xI2kymg10/ib1nY+Rygz8PouFk+BR96c=,tag:ZaMWvOoBIApq+xLrbT7tFw==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: node-app
              port: 3000
    tls:
        domains:
            - main: ENC[AES256_GCM,data:o/hT+FHh+qP9V1aonmKiZD7cCw==,iv:4ZHY8OEfoEA+C++ynw+zDIau0jZBDcpsz6WpMPDRU+k=,tag:4HTfKLQYDalm3C3M8pF3cg==,type:str]
              sans:
                - ENC[AES256_GCM,data:o0HIJEls4gSy4ITjk8z36kJU+uk=,iv:aXLij6ybqPLi+gFYkV9u+ARcY/3mzWC1HdGeP3DnQ4M=,tag:6ugKOxxZwj74Dtr+zjPxOw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: node-app-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVYzZjUWdPRUtxaWI4V3dZ
[...]
            0X4oohUs3ggMja6iq5KgrYHFK1xjJhlOzvYwUtfmsoDzmPz4tRz2sQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T20:30:00Z"
    mac: ENC[AES256_GCM,data:ELMoLrEQFjU8pZd88bbwyc2KC4kurRStTDjXkrPWz6OmNOnki4BVvaKsEgPOZIBwQiXovSofRx12uKDBZAYRP+ay/agEFp2OfqtY4n7klCXBBq3nyBU7TjEqcdGyM2bMRiWXHNiID1oQ89aoZJ4WCMtJC9X8RUr1VnZOL8YADFE=,iv:r2mpI72Y+/9ZJYYxOaTx6gf1L9qtcDrGIJ3RKsNBcww=,tag:m3mrgRH71vFf9G2zXPuZNg==,type:str]
    pgp:
        - created_at: "2024-06-22T20:30:00Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//XYvNl/5H6LGv1/RW+bPGHKhnvOBHqdm+/A07J04TrS+r
[...]
            =q9fm
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
